# wordle_solver

./: Cargo.toml  README.md
src/: main.rs
